kubernetes/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    name: ingress-service
spec:
  rules:
  - host: 172-232-198-61.ip.linodeusercontent.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              number: 3000
